--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
       <version>2.4.0-b180725.0644</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.15</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
