build name change

--- a/pom.xml
+++ b/pom.xml
@@ -114,11 +114,7 @@
             <artifactId>google-api-services-oauth2</artifactId>
             <version>v2-rev120-1.22.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-            <version>1.22.0</version>
-        </dependency>
+
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-plus</artifactId>
@@ -128,7 +124,7 @@
     </dependencies>
 
     <build>
-        <finalName>TwitterForDummies</finalName>
+        <finalName>DothrakiTwitter</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
