--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
             <version>v1-rev453-1.22.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-c3p0</artifactId>
+            <version>5.3.7.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
